<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_insertar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/save"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.android.libreriasa.BookCrudActivity">

    <LinearLayout
        style="@style/Head"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hd_activity_insertar" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnInsertar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="bookInsert"
                android:text="@string/btn_save"/>

            <Button
                android:id="@+id/btnBuscar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="findById"
                android:text="@string/btn_find"/>

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="bookEdit"
                android:text="@string/btn_edit"/>

            <Button
                android:id="@+id/btnDel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="bookDelete"
                android:text="@string/btn_delete"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:background="#FFFFFF">


            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="ID:"/>

            <EditText
                android:id="@+id/etId"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:background="#FFFFFF">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="Nombre:"/>

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="140dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:background="#FFFFFF">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="Codigo:"/>

            <EditText
                android:id="@+id/etCodigo"
                android:layout_width="140dp"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:background="#FFFFFF">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="Cantidad:"/>

            <EditText
                android:id="@+id/etCantidad"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:inputType="number"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:background="#FFFFFF">

             <TextView
                 android:layout_width="60dp"
                 android:layout_height="wrap_content"
                 android:text="Cat"/>

            <Spinner
                android:id="@+id/spnCat"
                android:layout_width="140dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
